Adjust for Boostrap 3

--- a/app/assets/stylesheets/application_lp.scss
+++ b/app/assets/stylesheets/application_lp.scss
@@ -32,4 +32,4 @@ $text_hover: #a0b8cf;
 @import "search.scss";
 @import "typeahead.js-bootstrap.scss";
 @import "footer.scss";
-
+@import "enterprise.scss";
