--- a/app/views/language/helpers/_followers.html.erb
+++ b/app/views/language/helpers/_followers.html.erb
@@ -11,6 +11,7 @@
                                       :alt => user.fullname,
                                       :title => user.fullname,
                                       :style => "width: 68px;",
+                                      :class => "round12",
                                       :gravatar => {:size => 68,
                                                     :default => "#{Settings.instance.server_url}/profile_icon.png" }) %>
               </div>
