--- a/app/views/layouts/_footer_content.html.erb
+++ b/app/views/layouts/_footer_content.html.erb
@@ -1,6 +1,6 @@
-<footer class="container footer" >
+<footer class="footer" >
 
-  <div class="container row footer_link_row_1" >
+  <div class="footer_link_row_1" >
     <%= link_to t(:page_footer_about), about_path %> |
     <a href="/pricing">Pricing</a> |
     <%= link_to 'Enterprise', enterprise_path %> | 
@@ -11,14 +11,14 @@
     <a href="/api" >API</a>
   </div>
 
-  <div class="container row footer_link_row_3" >
+  <div class="footer_link_row_3" >
     <%= link_to "Imprint", imprint_path %> |
     <%= link_to "Conditions of Use", terms_path %> |
     <%= link_to "Data protection provisions ", dataprivacy_path %> |
     <%= link_to "Disclaimer", disclaimer_path %>
   </div>
 
-  <div class="container row footer_social_media_row" >
+  <div class="footer_social_media_row" >
     <a href="https://twitter.com/VersionEye" class="footer_link_margin" target="new_Twitter" title="Twitter" ><i class="fa fa-twitter footer_social_icon" ></i></a>
 
     <a href="https://www.facebook.com/VersionEye" class="footer_link_margin" target="new_FB" title="Facebook" ><i class="fa fa-facebook footer_social_icon" ></i></a>
@@ -30,7 +30,7 @@
     <a href="http://pinterest.com/versioneye/pins/" class="footer_link_margin" target="new_Pinterest" title="Pinterest" ><i class="fa fa-pinterest footer_social_icon" ></i></a>
   </div>
 
-  <div class="container row footer_language_row" >
+  <div class="footer_language_row" >
     <a href="/java" >Java</a> |
     <a href="/ruby" >Ruby</a> |
     <a href="/python" >Python</a> |
