--- a/app/views/layouts/email_html_layout.html.erb
+++ b/app/views/layouts/email_html_layout.html.erb
@@ -7,7 +7,7 @@
 
   <body style="font-size: 14px;
               color: #616970;
-              font-family: 'Droid Sans','Droid Serif', 'Helvetica';
+              font-family: 'Droid Sans', 'Helvetica';
               height: 100%;
               margin: 0;
               background-color: #fafafa;
