--- a/app/views/page/faq.html.erb
+++ b/app/views/page/faq.html.erb
@@ -6,11 +6,11 @@
 
 <div class="col-md-9 col-xs-12" >
 
-  <div class="span8 content_header_def" >
+  <div class="content_header_def" >
     <h2>Frequently Asked Questions</h2>
   </div>
 
-  <div class="span8 content" >
+  <div class="content" >
     <h2>Why do I need that?</h2>
     <p class="l_faq_section">
       Why are you using a continuous integration system to run your tests? You could start your tests from the command line! Right? The reason why you are using a CI system is automation! And for the same reason you should use a continuous ypdating tool like VersionEye. VersionEye will never forget to check your project. It will do the job everyday, notify you and it will never get sick or go on vacation. VersionEye is working 24/7 only for you! It keeps you informed and makes you a better developer!
