--- a/app/views/pricing/index.html.erb
+++ b/app/views/pricing/index.html.erb
@@ -30,7 +30,7 @@
 
 </div>
 
-<div class="row well pricing alert-info">
+<div class="row well pricing " style="background-color: #d9edf7">
   <div class="col-md-4 col-xs-12" >
     <h3 class = "pricing_h">Personal</h3>
     <p>Do the next step with the personal plan to track your personal projects.</p>
