--- a/app/views/products/_product_show_authors.html.erb
+++ b/app/views/products/_product_show_authors.html.erb
@@ -10,7 +10,12 @@
     <% names = [] %>
     <% authors.each do |author| %>
       <% next if names.include?(author.name) %>
-      <%= gravatar_image_tag( author.email, :alt => author.name, :title => author.name, :style => 'width: 45px;', :gravatar => { :size => 45, :default => "#{Settings.instance.server_url}/profile_icon.png" } ) %>
+      <%= gravatar_image_tag( author.email, 
+                      :alt => author.name, 
+                      :title => author.name, 
+                      :style => 'width: 45px;', 
+                      :class => "round12",
+                      :gravatar => { :size => 45, :default => "#{Settings.instance.server_url}/profile_icon.png" } ) %>
       <% names.push(author.name) %>
     <% end %>
   </div>
