--- a/app/views/products/edit_versions.html.erb
+++ b/app/views/products/edit_versions.html.erb
@@ -1,14 +1,14 @@
-<div class="span3" >
+<div class="col-md-3" >
   <%= render 'products/helpers/edit_navi' %>
 </div>
 
-<div class="span8" >
+<div class="col-md-9" >
 
-  <div class="row content_header_def" >
+  <div class="content_header_def" >
     Edit <b><%= @product.name %></b>
   </div>
 
-  <div class="span8 content" >
+  <div class="content" >
 
     <span>
       Caution! Please delete only versions which are removed from the corresponding package manager as well.
