--- a/app/views/products/helpers/_dependency_table.html.erb
+++ b/app/views/products/helpers/_dependency_table.html.erb
@@ -1,7 +1,7 @@
 
   <% font_size = font_size_for_dep_table( @product ) %>
 
-  <table class="dependency_table" style="width: 570px; font-size: <%=font_size%>px;">
+  <table class="dependency_table" style="font-size: <%=font_size%>px;">
     <thead>
       <tr>
         <th ></th>
