--- a/app/views/products/helpers/_support_for_packagemanagers.html.erb
+++ b/app/views/products/helpers/_support_for_packagemanagers.html.erb
@@ -3,11 +3,12 @@
   <div class="span11" >
 
     <p >
-      VersionEye currently supports these 10 package managers: <a href="https://getcomposer.org/">Composer</a>,
+      VersionEye currently supports these 11 package managers: <a href="https://getcomposer.org/">Composer</a>,
       <a href="http://bundler.io/">Bundler</a>, <a href="https://pypi.python.org/pypi/pip/">PIP</a>,
       <a href="https://www.npmjs.org/">NPM</a>, <a href="http://bower.io/">Bower</a>,
       <a href="http://leiningen.org/">Leiningen</a>, <a href="http://cocoapods.org/">CocoaPods</a>,
-      <a href="http://maven.apache.org/">Maven</a>, <a href="http://www.scala-sbt.org/">SBT</a>
+      <a href="http://maven.apache.org/">Maven</a>, <a href="http://www.scala-sbt.org/">SBT</a>, 
+      https://www.biicode.com/
       and <a href="http://www.gradleware.com/">Gradle</a>.
     </p>
 
