--- a/app/views/shared/_connect_with_bitbucket.html.erb
+++ b/app/views/shared/_connect_with_bitbucket.html.erb
@@ -1,4 +1,4 @@
 <button onclick="page_view('ga_connect_with_bitbucket'); document.location.href='<%= auth_bitbucket_connect_url %>';"
-  class="btn btn-bitbucket btn-large btn-signin" style="width: 270px !important;">
-  <i class = "icon-github"></i> | Connect with Bitbucket
+  class="btn btn-bitbucket btn-large btn-signin btn-primary" style="width: 270px !important;">
+  <i class = "fa fa-bitbucket"></i> | Connect with Bitbucket
 </button>
