--- a/app/assets/stylesheets/colorschema.scss
+++ b/app/assets/stylesheets/colorschema.scss
@@ -3,7 +3,7 @@
 @mixin color-schema ($fg, $bg, $border-color){
 	color: $fg;
 	background-color: $bg;
-	border-color: $border-color;
+	border-color: transparent;
 }
 
 .default {
