--- a/app/assets/stylesheets/well.scss
+++ b/app/assets/stylesheets/well.scss
@@ -5,7 +5,7 @@
   margin: 0px 0px 60px 0px;
   min-height: 20px;
 
-  border: 1px solid #eeeeee;
+  border: transparent;
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
           border-radius: 4px;
