--- a/app/views/auth/bitbucket/new.html.erb
+++ b/app/views/auth/bitbucket/new.html.erb
@@ -1,6 +1,6 @@
 <% title 'Sign Up' %>
 
-<div class="span10 col2-left" >
+<div class="col-md-10 col2-left" >
 
   <%= form_tag('/auth/bitbucket/create', :method => 'post', :class => 'form-horizontal') do  %>
 
@@ -13,7 +13,7 @@
     <div class="form-group">
       <%= label_tag(:email, "Email", :class => "control-label", :for => "email") %>
       <div class="controls">
-        <%= text_field_tag :email, @email, :class => "round", :id => "email"  %> mandatory
+        <%= text_field_tag :email, @email, :class => "round form-control", :id => "email", :placeholder => "mandatory"  %>
       </div>
     </div>
 
@@ -21,7 +21,7 @@
       <div class="form-group">
           <%= label_tag :promo_code, "Promo code", :class => "control-label", :for => "promo_code" %>
         <div class="controls">
-          <%= text_field_tag :promo_code, @promo, :id => "promo_code" %> optional
+          <%= text_field_tag :promo_code, @promo, :id => "promo_code", :class => "form-control", :placeholder => "optional" %> 
         </div>
       </div>
     <% end %>
