--- a/app/views/products/_extended_search.html.erb
+++ b/app/views/products/_extended_search.html.erb
@@ -9,7 +9,7 @@
       <div class="form-group">
         <%= label_tag(:q, "Name", :class => "control-label" )%>
         <div class="controls">
-          <%= text_field_tag :q, @query, :class => "form-control" %>
+          <%= text_field_tag :q, @query, :id => 'q', :class => "form-control" %>
         </div>
       </div>
       <div class="form-group">
@@ -38,7 +38,7 @@
 
       <div class="form-group" style = "height: 30px; padding: 10px 0px 20px 0;">
         <div >
-          <button type="submit" class="btn btn-primary" >Search</button>
+          <button type="submit" class="btn btn-primary" >Find</button>
         </div>
       </div>
 
