--- a/app/views/products/_product_show_dependencies_npm.html.erb
+++ b/app/views/products/_product_show_dependencies_npm.html.erb
@@ -3,12 +3,12 @@
 <% main_dependencies = @product.dependencies(nil) %>
 
 <div class="row">
-	<div class="span6">
+	<div class="col-md-12">
 		<h5 class="dep_header">
 			<%= pluralize( main_dependencies.count, 'Compile Dependencies') %>
 		</h5>
 	</div>
-	<div class="span7" >
+	<div class="col-md-12" >
 		<% if !main_dependencies.empty? %>
       <%= render :partial => 'products/helpers/dependency_table', :locals => { :dependencies => main_dependencies }  %>
     <% end %>
