--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,15 +1,15 @@
 
-<div class="span3" >
+<div class="col-md-3" >
   <%= render 'products/helpers/edit_navi' %>
 </div>
 
-<div class="span8" >
+<div class="col-md-9" >
 
-  <div class="row content_header_def" >
+  <div class="content_header_def" >
     Edit description of <b><%= @product.name %></b>
   </div>
 
-  <div class="span8 content" >
+  <div class="content" >
     <p>
       You are not allowed to edit crawled data. But you can add additional information.
     </p>
@@ -22,7 +22,7 @@
     <br/>
     <div class="boxContainer">
       <%= form_tag("/#{@product.language_esc}/#{@product.to_param}/update", :method => "post") do  %>
-        <%= text_area_tag :description_manual, @product.description_manual, :class => "round", :style => "width: 546px; height: 170px;", :maxlength => "1000", :onKeyUp => "textCounter(this, document.getElementById('counter'), 1000)", :id => "description"  %>
+        <%= text_area_tag :description_manual, @product.description_manual, :class => "form-control", :style => "height: 170px;", :maxlength => "1000", :onKeyUp => "textCounter(this, document.getElementById('counter'), 1000)", :id => "description"  %>
         <br/>
         <button type="submit" class="btn btn-large btn-primary" >Save</button>
       <% end %>
