--- a/app/views/products/edit_links.html.erb
+++ b/app/views/products/edit_links.html.erb
@@ -1,41 +1,38 @@
-<div class="span3" >
+<div class="col-md-3" >
   <%= render 'products/helpers/edit_navi' %>
 </div>
 
-<div class="span8" >
+<div class="col-md-9" >
 
-  <div class="row content_header_def" >
+  <div class="content_header_def" >
     Edit <b><%= @product.name %></b>
   </div>
 
-  <div class="span8 content" >
+  <div class="content" >
 
     <div class="boxContainer">
-      <%= form_tag("/#{@product.language_esc}/#{@product.to_param}/update", :method => "post") do  %>
-        <div style="display:table-row;">
-          <div class="labelCelMiddle" style="width: 80px;">
-            <%= label_tag(:label, "Label") %>
-          </div>
-          <div class="inputCel" style="width: 450px;">
-            <%= text_field_tag :link_name, "", :class => "round", :style=>"width: 420px;" %>
-          </div>
-        </div>
-        <div style="display:table-row;">
-          <div class="labelCelMiddle" style="width: 80px;">
-            <%= label_tag(:link, "URL") %>
-          </div>
-          <div class="inputCel" style="width: 450px;">
-            <%= text_field_tag :link_url, "", :class => "round", :style=>"width: 420px;" %>
+      <%= form_tag("/#{@product.language_esc}/#{@product.to_param}/update", :method => "post", :class => "form-horizontal") do  %>
+        
+        <div class="form-group">
+          <%= label_tag(:label, "Label", :class => "control-label") %>
+          <div class="controls">
+            <%= text_field_tag :link_name, "", :class => "form-control" %>
           </div>
         </div>
-        <div style="display:table-row;">
-          <div class="labelCelMiddle" style="width: 80px;">
-            &nbsp;
+
+        <div class="form-group">
+          <%= label_tag(:link, "URL", :class => "control-label") %>
+          <div class="controls">
+            <%= text_field_tag :link_url, "", :class => "form-control" %>
           </div>
-          <div class="inputCel" style="width: 450px;">
+        </div>
+
+        <div class="form-group">
+          <div class="controls">
             <button type="submit" class="btn btn-large btn-primary" >Add</button>
           </div>
         </div>
+
       <% end %>
       <br/>
       <% version_links = @product.http_links %>
@@ -68,18 +65,18 @@
 
 
       <div class="boxContainer">
-        <%= form_tag("/#{@product.language_esc}/#{@product.to_param}/update", :method => "post") do  %>
-          <div style="display:table-row;">
-            <div class="labelCelMiddle" style="width: 80px;">
-              <%= label_tag(:twitter_name, "Twitter ID") %>
-            </div>
-            <div class="inputCel" style="width: 450px;">
-              <%= text_field_tag :twitter_name, @product.twitter_name, :class => "round", :style=>"width: 420px;" %>
+        <%= form_tag("/#{@product.language_esc}/#{@product.to_param}/update", :method => "post", :class => "form-horizontal") do  %>
+
+          <div class="form-group">
+            <%= label_tag(:twitter_name, "Twitter ID", :class => "control-label") %>
+            <div class="controls">
+              <%= text_field_tag :twitter_name, @product.twitter_name, :class => "form-control" %>
             </div>
           </div>
-          <div >
-            <div class="inputCel" style="width: 450px;">
-              <button type="submit" class="btn btn-large btn-primary" >Save</button>
+
+          <div class="form-group">
+            <div class="controls">
+              <button type="submit" class="btn btn-large btn-primary" >Add</button>
             </div>
           </div>
         <% end %>
