--- a/app/views/products/project_usage.html.erb
+++ b/app/views/products/project_usage.html.erb
@@ -1,7 +1,7 @@
 
 <% title 'Project Usage' %>
 
-<div class="span3">
+<div class="col-md-3">
 
   <% if !signed_in? && !Rails.env.enterprise? %>
     <%= render '/shared/github_ad' %>
@@ -11,8 +11,8 @@
 
 <% if @product %>
   
-  <div class="span8" >
-    <div class="row content_header_def" >
+  <div class="col-md-9" >
+    <div class="content_header_def" >
       <%= link_to @product.name, product_version_path(@product) %> is used in <%= pluralize(@product.project_usage , "project")  %>
     </div>
     <div class="content">
@@ -43,7 +43,7 @@
 
 <% else %>
 
-  <div class="span8" >
+  <div class="col-md-9" >
     <div class="row content_header_def" >
       No Package selected.
     </div>
