--- a/app/views/settings/emailserver/index.html.erb
+++ b/app/views/settings/emailserver/index.html.erb
@@ -1,15 +1,15 @@
 
-<div class="span3" >
+<div class="col-md-3" >
   <%= render 'settings/navi' %>
 </div>
 
-<div class="span8" >
+<div class="col-md-9" >
 
-  <div class="row content_header_def" >
+  <div class="content_header_def" >
     Email Server Settings
   </div>
 
-  <div class="span8 content" >
+  <div class="content" >
 
     <%= form_tag( settings_update_profile_path, :method => "post", :class => "form-horizontal") do  %>
 
