--- a/app/views/versioncomments/show.html.erb
+++ b/app/views/versioncomments/show.html.erb
@@ -1,16 +1,16 @@
 <% if !@comment.nil? && !@product.nil? %>
 
-<div class="span3" >
+<div class="col-md-3" >
   
 </div>
 
-<div class="span8" >
+<div class="col-md-9" >
 
-  <div class="row content_header_def" >
+  <div class="content_header_def" >
     Version Comment
   </div>
   
-  <div class="span8 content" >
+  <div class="content" >
     <h1 ><%= @product.name_and_version %></h1>
 
     <%= render :partial => 'shared/show_version_comment', :locals => {:comment => @comment} %>
