Update search for mobile phones

--- a/app/assets/stylesheets/well.scss
+++ b/app/assets/stylesheets/well.scss
@@ -33,6 +33,12 @@
   }
 }
 
+@media(max-width:600px) {
+    .well-white { 
+      padding: 0;
+    }
+}
+
 .well {
   &.pricing {margin: 0px 30px 20px 30px;}
   &.white{
