--- a/app/views/products/search.html.erb
+++ b/app/views/products/search.html.erb
@@ -1,7 +1,7 @@
 
 <% title 'Search Results' %>
 
-<div class="col-md-3">
+<div class="col-md-3" >
 
   <%= render 'extended_search' %>
 
@@ -11,7 +11,7 @@
 
 </div>
 
-<div class="col-md-9" >
+<div class="col-md-9 col-mx-12" >
   <div class="content_header_def" >
     <% if @products && !@products.empty? %>
       <em> `<%= params[:q] %>`</em> has returned <%= @products.total_entries %> results
