--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -42,6 +42,13 @@ div.content {
   border-top: 1px solid #ddd;
 }
 
+@media(max-width:660px) {
+  div.content {
+    border-left: 0;
+    padding: 0px 0px 30px 0px;
+  }
+}
+
 div.content_no_head {
   padding: 30px 0px 30px 30px;
   border-left: 1px solid #ddd;
@@ -50,6 +57,7 @@ div.content_no_head {
 .content_header_def{
   padding-left: 30px;
   padding-bottom: 15px;
+  padding-top: 15px;
   border-left: 1px solid #DDD;
 }
 
