--- a/app/views/shared/_dependency_badge.html.erb
+++ b/app/views/shared/_dependency_badge.html.erb
@@ -1,7 +1,7 @@
 
 <% if project.show_dependency_badge? %>
   <%= render 'shared/dialog_dependency_badge' %>
-  <a href="#dialog_dependency_badge" id="show_dep_badge_window" role="button" data-toggle="modal" rel="nofollow" rel="nofollow" >
+  <a href="#dialog_dependency_badge" id="show_dep_badge_window" role="button" data-toggle="modal" rel="nofollow" >
     <img id="dependency_badge" src="#" alt="Dependency Badge" rel="nofollow" />
   </a>
   <script type="text/javascript">
