Adjustments for W3C Validator.

--- a/app/views/layouts/_footer_content.html.erb
+++ b/app/views/layouts/_footer_content.html.erb
@@ -6,7 +6,7 @@
     <%= link_to 'Enterprise', enterprise_path %> | 
     <a href="/faq">FAQs</a> |
     <%= link_to t(:page_footer_statistics), statistics_path %> |
-    <a href="https://bitbucket.org/versioneye/versioneye/issues" id="feedback_footer" target="_issue_tracker" >Feedback</a> |
+    <a href="https://bitbucket.org/versioneye/versioneye/issues" id="feedback_footer" target="issue_tracker_74" >Feedback</a> |
     <a href="http://blog.versioneye.com/" target="versioneye_blog">Blog</a> |
     <a href="/api" >API</a>
   </div>
