--- a/app/views/layouts/_footer_enterprise_content.html.erb
+++ b/app/views/layouts/_footer_enterprise_content.html.erb
@@ -3,7 +3,7 @@
   <div class="container row footer_link_row_1" >
     <%= link_to t(:page_footer_about), about_path %> |
     <a href="http://blog.versioneye.com/" target="versioneye_blog">VersionEye Blog</a> |
-    <a href="https://bitbucket.org/versioneye/versioneye/issues" id="feedback_footer" target="_issue_tracker" >Feedback</a> |
+    <a href="https://bitbucket.org/versioneye/versioneye/issues" id="feedback_footer" target="issue_tracker_73" >Feedback</a> |
     <a href="/api" >API</a>
   </div>
 
