--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -83,7 +83,7 @@
           </li>
           
           <li>
-            <a href="https://bitbucket.org/versioneye/versioneye/issues" title="Feedback" id="feedback_link" target="_TICKETS">
+            <a href="https://bitbucket.org/versioneye/versioneye/issues" title="Feedback" id="feedback_link" target="TICKETS">
               <i class="fa fa-comment"></i>
             </a>
           </li>
