--- a/app/views/shared/_social_buttons.html.erb
+++ b/app/views/shared/_social_buttons.html.erb
@@ -31,7 +31,7 @@
     </a>
   </div>
   <div>
-    <a href="https://bitbucket.org/versioneye/versioneye/issues" title="Feedback" id="love_icon" role="button" target="_TICKETS">
+    <a href="https://bitbucket.org/versioneye/versioneye/issues" title="Feedback" id="love_icon" role="button" target="TICKETS">
       <div class="btn-social btn-like rounded" ></div>
     </a>
   </div>
