Fix modal dialogs for badges

--- a/app/views/settings/links/index.html.erb
+++ b/app/views/settings/links/index.html.erb
@@ -21,42 +21,42 @@
       <div class="form-group">
         <%= label_tag :github, "GitHub", :class => "control-label", :for => "github" %>
         <div class="controls">
-          <%= text_field_tag :github, @userlinkcollection.github, :id => "github", :class => "input-big", :class => 'form-control' %>
+          <%= text_field_tag :github, @userlinkcollection.github, :id => "github", :class => 'form-control' %>
         </div>
       </div>
 
       <div class="form-group">
         <%= label_tag :stackoverflow, "Stackoverflow", :class => "control-label", :for => "stackoverflow" %>
         <div class="controls">
-          <%= text_field_tag :stackoverflow, @userlinkcollection.stackoverflow, :id => "stackoverflow", :class => "input-big", :class => 'form-control' %>
+          <%= text_field_tag :stackoverflow, @userlinkcollection.stackoverflow, :id => "stackoverflow", :class => 'form-control' %>
         </div>
       </div>
 
       <div class="form-group">
         <%= label_tag :twitter, "Twitter", :class => "control-label", :for => "twitter" %>
         <div class="controls">
-          <%= text_field_tag :twitter, @userlinkcollection.twitter, :id => "twitter", :class => "input-big", :class => 'form-control' %>
+          <%= text_field_tag :twitter, @userlinkcollection.twitter, :id => "twitter", :class => 'form-control' %>
         </div>
       </div>
 
       <div class="form-group">
         <%= label_tag :linkedin, "LinkedIn", :class => "control-label", :for => "linkedin" %>
         <div class="controls">
-          <%= text_field_tag :linkedin, @userlinkcollection.linkedin, :id => "linkedin", :class => "input-big", :class => 'form-control' %>
+          <%= text_field_tag :linkedin, @userlinkcollection.linkedin, :id => "linkedin", :class => 'form-control' %>
         </div>
       </div>
 
       <div class="form-group">
         <%= label_tag :facebook, "Facebook", :class => "control-label", :for => "facebook" %>
         <div class="controls">
-          <%= text_field_tag :facebook, @userlinkcollection.facebook, :id => "facebook", :class => "input-big", :class => 'form-control' %>
+          <%= text_field_tag :facebook, @userlinkcollection.facebook, :id => "facebook", :class => 'form-control' %>
         </div>
       </div>
 
       <div class="form-group">
         <%= label_tag :xing, "Xing", :class => "control-label", :for => "xing" %>
         <div class="controls">
-          <%= text_field_tag :xing, @userlinkcollection.xing, :id => "xing", :class => "input-big", :class => 'form-control' %>
+          <%= text_field_tag :xing, @userlinkcollection.xing, :id => "xing", :class => 'form-control' %>
         </div>
       </div>
 
